--- a/Gerenciamento de Estoque/CSS/login.css
+++ b/Gerenciamento de Estoque/CSS/login.css
@@ -1,52 +1,211 @@
-*{
-    padding: 0;
-    margin: 0; 
-    box-sizing: border-box;   
+*,*::before,*::after{box-sizing:border-box}body,h1,h2,h3,h4,p,figure,blockquote,dl,dd{margin:0}ul[role="list"],ol[role="list"]{list-style:none}html:focus-within{scroll-behavior:smooth}body{min-height:100vh;text-rendering:optimizeSpeed;line-height:1.5}a:not([class]){text-decoration-skip-ink:auto}img,picture{max-width:100%;display:block}input,button,textarea,select{font:inherit}@media(prefers-reduced-motion:reduce){html:focus-within{scroll-behavior:auto}*,*::before,*::after{animation-duration:.01ms !important;animation-iteration-count:1 !important;transition-duration:.01ms !important;scroll-behavior:auto !important}}
+
+/*-------------------- Page Login --------------------*/
+
+#pageLogin{
+        
+    background-image: url("../images/login-background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: arial;    
+        
+    }
+    
+    div.loginHeader{
+        text-align: center;    
+    }
+
+    div.loginHeader{
+        margin-bottom: 60px;    
+    }
+
+    div.loginHeader h1{
+        font-size: 100px;
+        color: #f685a2;
+        font-weight: bold;
+    }
+
+    div.loginHeader p{
+        color: #ffdae3;
+        font-size: 50px;
+        margin:0px;
+        text-transform: uppercase;
+        display: inline-block; /* Mantem a linha continua centralizada abaixo do título h1*/     
+        
+    }
+
+    div.loginHeader p:after{ /* Cria a linha que mantem o titulo principal da pagina sublinhado*/
+        content:'';         
+        display: block;
+        height: 5px;
+        background: #f685a2;
+        margin:0 auto;
+    }
+
+    div.loginBody form{
+        margin: 100px auto;
+        width: 450px;
+        background: rgba(0,0,0,.5);
+        padding: 50px;
+        border: 2px solid #fff;
+        border-radius: 10px;
+
+    }
+
+    div.loginInputsContainer {
+        margin-top: 25px;   
+
+    }
+
+    div.loginInputsContainer label{
+        display: block;
+        text-transform: uppercase;
+        font-size: 20px;
+        font-weight: bold;
+        color: #fff;
+
+    }
+
+    div.loginInputsContainer input{
+        height: 40px;
+        width: 100%;
+        border: 2px solid #d40339;
+        font-size: 20px;
+        padding: 5px;
+        text-align: center;
+        font-style: italic;
+    }
+
+    div.loginButtonContainer {
+        text-align: center;
+    }
+
+    div.loginButtonContainer button{
+        margin-top: 30px;
+        font-size: 20px;
+        padding: 10px 20px;
+        background-color: #f685a2;
+        border: 1px solid #d40339;
+        color: #fff;
+
+    }
+
+/*-------------------- HomePage--------------------*/
+
+div.header{
+    width: 100%;
+    height: 10px;
+    background-color: #f685a1;
+
+}
+
+div.banner{
+    background-image: url("../images/banner.png"); 
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 50px;
+    padding-bottom: 100px;
+    
 }
 
 
-body{
-    
-   background-image: url("../images/login-background.png");
-   background-repeat: no-repeat;
-   background-size: cover;
-      
-    
+div.homepageContainer{
+    width: 100%; 
+    max-width: 900px;  
+    margin: 0 auto;
+    height: 60vh;
+       
 }
 
-div.loginHeader{
+div.bannerHeader h1{
+    font-size: 100px;
+    color: #f685a2;
+}
+
+div.bannerHeader p{
+    font-size: 40px;
+    color: #f685a2;
+    text-transform: uppercase;
+    line-height: 100%;
+}
+
+p.bannerTagline{
+    font-size: 25px;
+    margin-top: 50px;
+    color: #fff;
+}
+
+div.bannerIcons{
+    margin-top: 80px;
+}
+
+div.bannerIcons a{
+    font-size: 25px;
+    padding: 7px 15px;
+    margin-left: 40px;
+    background: rgba(0,0,0,.5);
+    color: #ccc;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+}
+
+div.bannerIcons a:first-child{ /*Segeciona o primeiro elemento dos icones dentro da div*/
+    margin-left: 0px;
+}
+
+div.bannerIcons a:hover{
+    background-color: #f685a2;
+    color: #fff;
+    font-size: 25px;
+    width: 55px;
+    height: 55px;
+    padding: 9px 18px;
+    transition: 0.5s all;
+}
+
+div.homepageFeatures{
+    display: flex;
+    justify-content:center;    
+    margin-top: 15px;
+}
+
+div.feature{
+    padding: 20px;  
     text-align: center;
 }
 
-div.loginHeader h1{
-    font-size: 100px;
-    color: #f685a2;
-    font-weight: bold;
+div.feature p{
+    text-align: justify;
 }
 
-div.loginHeader p{
-    color: #ffdae3;
-    font-size: 50px;
-	margin:0px;
-	text-transform: uppercase;
-	display: inline-block;
-    font-family: 'Sans';  
-    
+div.feature span.featureIcon{
+    height: 100px;
+    width: 100px;
+    font-size: 65px;
+    display: inline-block;
+    background-color: #f685a1;
+    color: #fff;
+    border-radius: 50%;
+    padding: auto;    
 }
 
-div.loginHeader p:after{
-	content:'';
-	display: block;
-	height: 5px;
-	background: #f685a2;
-	margin:0 auto;
+div.feature h3.featureTitle{
+    margin-bottom: 20px;
 }
 
-div.loginBody{
-    margin: 0 auto;
-    width: 500px;
-    background: rgba(0,0,0,.5);
-    padding: 50px;
 
+div.feature h3.featureDescription{
+    color: #848484;
 }
+
+
+
+
+
+
+
+
+
 
